--- a/FNSProject/templates/navBar.html
+++ b/FNSProject/templates/navBar.html
@@ -428,7 +428,7 @@
         <a href="{% url 'personalDetail' alarm.personalMatching.id %}">{{alarm.text}}</a>
         
         {% elif alarm.notification_type == "teamComment" %}
-        <a href="{% url 'teamMatching_detail' alarm.teamMatching.id %}">{{alarm.text}}</a>
+        <a href="{% url 'teamMatchingDetail' alarm.teamMatching.id %}">{{alarm.text}}</a>
       
         {% elif alarm.notification_type == "recruitingComment" %}
         <a href="{% url 'recruiting_detail' alarm.recruiting.id %}">{{alarm.text}}</a>
@@ -440,7 +440,7 @@
         <a href="{% url 'personalDetail' alarm.personalMatching.id %}">{{alarm.text}}</a>
 
         {% elif alarm.notification_type == "teamMatchingApply" %}
-        <a href="{% url 'teamMatching_detail' alarm.teamMatching.id %}">{{alarm.text}}</a>
+        <a href="{% url 'teamMatchingDetail' alarm.teamMatching.id %}">{{alarm.text}}</a>
 
         {% elif alarm.notification_type == "recruitingApply" %}
         <a href="{% url 'recruiting_detail' alarm.recruiting.id %}">{{alarm.text}}</a>
@@ -464,7 +464,7 @@
         <a href="{% url 'personalDetail' alarm.personalMatching.id %}">{{alarm.text}}</a>
 
         {% elif alarm.notification_type == "teamReply" %}
-        <a href="{% url 'teamMatching_detail' alarm.teamMatching.id %}">{{alarm.text}}</a>
+        <a href="{% url 'teamMatchingDetail' alarm.teamMatching.id %}">{{alarm.text}}</a>
 
         {% elif alarm.notification_type == "recruitingReply" %}
         <a href="{% url 'recruiting_detail' alarm.recruiting.id %}">{{alarm.text}}</a>
@@ -482,7 +482,7 @@
         <a href="{% url 'detail' alarm.team.id %}">{{alarm.text}}</a>
 
         {% elif alarm.notification_type == "acceptSuggestion" %}
-        <a href="{% url 'teamMatching_detail' alarm.teamMatching.id %}">{{alarm.text}}</a>
+        <a href="{% url 'teamMatchingDetail' alarm.teamMatching.id %}">{{alarm.text}}</a>
 
         {% elif alarm.notification_type == "resultInput" %}
         <a href="{% url 'decidedDetail' alarm.teamMatching.decidedMatch.id %}">{{alarm.text}}</a>
@@ -502,7 +502,7 @@
         <a class="alarm" onclick="return checkNotification('{{alarm.id}}');" href="{% url 'personalDetail' alarm.personalMatching.id %}">{{alarm.text}}</a>
         
         {% elif alarm.notification_type == "teamComment" %}
-        <a class="alarm" onclick="return checkNotification('{{alarm.id}}');" href="{% url 'teamMatching_detail' alarm.teamMatching.id %}">{{alarm.text}}</a>
+        <a class="alarm" onclick="return checkNotification('{{alarm.id}}');" href="{% url 'teamMatchingDetail' alarm.teamMatching.id %}">{{alarm.text}}</a>
       
         {% elif alarm.notification_type == "recruitingComment" %}
         <a class="alarm" onclick="return checkNotification('{{alarm.id}}');" href="{% url 'recruiting_detail' alarm.recruiting.id %}">{{alarm.text}}</a>
@@ -515,7 +515,7 @@
 
         {% elif alarm.notification_type == "teamMatchingApply" %}
         <div class="alarm" style="width:200px; text-overflow: ellipsis; max-width: 300px;">
-        <a class="alarm" style="text-overflow: ellipsis;" onclick="return checkNotification('{{alarm.id}}');" href="{% url 'teamMatching_detail' alarm.teamMatching.id %}"><span style="width:200px; text-overflow: ellipsis; max-width: 200px;">{{alarm.text}}</span></a>
+        <a class="alarm" style="text-overflow: ellipsis;" onclick="return checkNotification('{{alarm.id}}');" href="{% url 'teamMatchingDetail' alarm.teamMatching.id %}"><span style="width:200px; text-overflow: ellipsis; max-width: 200px;">{{alarm.text}}</span></a>
         </div>
         {% elif alarm.notification_type == "recruitingApply" %}
         <a class="alarm" onclick="return checkNotification('{{alarm.id}}');" href="{% url 'recruiting_detail' alarm.recruiting.id %}">{{alarm.text}}</a>
@@ -539,7 +539,7 @@
         <a class="alarm" onclick="return checkNotification('{{alarm.id}}');" href="{% url 'personalDetail' alarm.personalMatching.id %}">{{alarm.text}}</a>
 
         {% elif alarm.notification_type == "teamReply" %}
-        <a class="alarm" onclick="return checkNotification('{{alarm.id}}');" href="{% url 'teamMatching_detail' alarm.teamMatching.id %}">{{alarm.text}}</a>
+        <a class="alarm" onclick="return checkNotification('{{alarm.id}}');" href="{% url 'teamMatchingDetail' alarm.teamMatching.id %}">{{alarm.text}}</a>
 
         {% elif alarm.notification_type == "recruitingReply" %}
         <a class="alarm" onclick="return checkNotification('{{alarm.id}}');" href="{% url 'recruiting_detail' alarm.recruiting.id %}">{{alarm.text}}</a>
@@ -557,7 +557,7 @@
         <a class="alarm" onclick="return checkNotification('{{alarm.id}}');" href="{% url 'detail' alarm.team.id %}">{{alarm.text}}</a>
 
         {% elif alarm.notification_type == "acceptSuggestion" %}
-        <a class="alarm" onclick="return checkNotification('{{alarm.id}}');" href="{% url 'teamMatching_detail' alarm.teamMatching.id %}">{{alarm.text}}</a>
+        <a class="alarm" onclick="return checkNotification('{{alarm.id}}');" href="{% url 'teamMatchingDetail' alarm.teamMatching.id %}">{{alarm.text}}</a>
         
         {% elif alarm.notification_type == "resultInput" %}
         <a class="alarm" onclick="return checkNotification('{{alarm.id}}');" href="{% url 'decidedDetail' alarm.teamMatching.decidedMatch.id %}">{{alarm.text}}</a>
